# python-calculator

./: CHANGELOG.md  pyproject.toml
.github/workflows/: release.yml
calculator/: __init__.py  calculator.py
calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_calculator.py
